k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 4  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lykieuchi/ecommerce-web-front-end:1.0
          ports:
            - containerPort: 3000  

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend  
  ports:
    - protocol: TCP
      port: 3000  
      targetPort: 3000
